--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.0.0",
@@ -28,7 +29,6 @@
     "babel-preset-env": "^1.6.1",
     "babel-register": "^6.11.6",
     "browser-sync": "^2.23.6",
-    "css-loader": "^0.28.9",
     "eslint": "^4.17.0",
     "eslint-plugin-import": "^2.8.0",
     "exports-loader": "^0.7.0",
@@ -41,14 +41,18 @@
     "gulp-watch": "^5.0.0",
     "hugo-bin": "^0.22.0",
     "imports-loader": "^0.7.1",
+    "mqtt": "^2.16.0",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.0.0",
     "url-loader": "^0.6.2",
+    "uuid": "^3.2.1",
     "vue": "^2.5.13",
+    "vue-highlightjs": "^1.3.3",
     "webpack": "3.10.0",
     "whatwg-fetch": "^2.0.3"
   },
   "devDependencies": {
+    "css-loader": "^0.28.10",
     "del": "^3.0.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-html": "^4.0.2",
@@ -58,7 +62,10 @@
     "gulp-pug": "^3.3.0",
     "gulp-rev-all": "^0.9.7",
     "gulp-sass": "^3.1.0",
+    "html-loader": "^0.5.5",
+    "pug-html-loader": "^1.1.5",
     "run-sequence": "^2.2.1",
-    "s3-deploy": "^0.10.0"
+    "s3-deploy": "^0.10.0",
+    "sass-loader": "^6.0.7"
   }
 }
