--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "hugo-bin": "^0.22.0",
     "imports-loader": "^0.7.1",
     "mqtt": "^2.16.0",
-    "postcss-cssnext": "^3.1.0",
+    "postcss-cssnext": "^3.1.2",
     "postcss-import": "^11.0.0",
     "url-loader": "^0.6.2",
     "uuid": "^3.2.1",
@@ -60,6 +60,7 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
     "eslint-plugin-standard": "^3.0.1",
+    "gulp-inline-css": "3.1.1",
     "gulp-pug": "^3.3.0",
     "gulp-rev-all": "^0.9.7",
     "gulp-sass": "^3.1.0",
