--- a/site/config.toml
+++ b/site/config.toml
@@ -2,11 +2,11 @@ baseurl = "/"
 languageCode = "en-us"
 languageLang = "en"
 title = "Checkly | Active Monitoring for Dev & Ops teams"
-
-# RSS, categories and tags disabled for an easy start
-# See configuration options for more details:
-# https://gohugo.io/getting-started/configuration/#toml-configuration
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
+
+[params]
+    description = "Checkly is the easiest way to monitor your browser click flows and API responses from a single dashboard"
+
 
 [[menu.docs]]
 	name = "API"
