--- a/site/config.toml
+++ b/site/config.toml
@@ -4,6 +4,7 @@ languageLang = "en"
 title = "Checkly | API and Site Transaction Monitoring for Dev & Ops Teams"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 enableGitInfo = true
+enableRobotsTXT = true
 
 pygmentsCodeFences = true
 pygmentsUseClasses = true
