feat: adds blog on node.js 2019

--- a/site/config.toml
+++ b/site/config.toml
@@ -1,7 +1,7 @@
 baseurl = "https://checklyhq.com"
 languageCode = "en-us"
 languageLang = "en"
-title = "Checkly | API Monitoring and Site Transaction Monitoring for DevOps Teams"
+title = "API monitoring and Site Transaction Monitoring for DevOps Teams"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
 enableGitInfo = true
 enableRobotsTXT = true
