--- a/package.json
+++ b/package.json
@@ -32,13 +32,12 @@
     "eslint-plugin-import": "^2.16.0",
     "exports-loader": "^0.7.0",
     "file-loader": "^1.1.11",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-flatten": "^0.4.0",
     "gulp-postcss": "^7.0.1",
-    "gulp-util": "^3.0.7",
     "gulp-watch": "^5.0.1",
-    "hugo-bin": "^0.22.0",
+    "hugo-bin": "0.29.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "^3.1.0",
     "postcss-import": "^11.1.0",
@@ -56,9 +55,9 @@
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
     "gulp-inline-css": "3.3.1",
-    "gulp-pug": "^3.3.0",
+    "gulp-pug": "^4.0.1",
     "gulp-rev-all": "^0.9.8",
-    "gulp-sass": "^3.2.1",
+    "gulp-sass": "^4.0.2",
     "html-loader": "^0.5.5",
     "pug-html-loader": "^1.1.5",
     "run-sequence": "^2.2.1",
