--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "gulp-flatten": "^0.4.0",
     "gulp-postcss": "^7.0.1",
     "gulp-watch": "^5.0.1",
-    "hugo-bin": "0.29.0",
+    "hugo-bin": "0.39.0",
     "imports-loader": "^0.7.1",
-    "postcss-cssnext": "^3.1.0",
+    "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
     "url-loader": "^0.6.2",
     "uuid": "^3.3.2",
