--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "babel-plugin-transform-object-assign": "^6.8.0",
     "babel-plugin-transform-object-rest-spread": "^6.8.0",
     "babel-preset-env": "^1.7.0",
-    "babel-register": "^6.11.6",
+    "babel-register": "^6.26.0",
+    "bootstrap": "4.0.0-alpha.6",
     "browser-sync": "^2.26.3",
+    "css-loader": "^0.28.11",
+    "del": "^3.0.0",
     "eslint": "^4.19.1",
     "eslint-plugin-import": "^2.16.0",
     "exports-loader": "^0.7.0",
@@ -35,29 +38,26 @@
     "gulp": "^4.0.0",
     "gulp-babel": "^7.0.1",
     "gulp-flatten": "^0.4.0",
+    "gulp-inline-css": "3.3.1",
     "gulp-postcss": "^7.0.1",
+    "gulp-pug": "^4.0.1",
+    "gulp-rev-all": "^0.9.8",
+    "gulp-sass": "^4.0.2",
     "gulp-watch": "^5.0.1",
+    "html-loader": "^0.5.5",
     "hugo-bin": "0.39.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
-    "url-loader": "^0.6.2",
-    "uuid": "^3.3.2",
-    "webpack": "3.10.0",
-    "whatwg-fetch": "^2.0.4",
-    "gulp-inline-css": "3.3.1",
-    "gulp-pug": "^4.0.1",
-    "gulp-rev-all": "^0.9.8",
-    "gulp-sass": "^4.0.2",
-    "html-loader": "^0.5.5",
     "pug-html-loader": "^1.1.5",
     "run-sequence": "^2.2.1",
     "sass-loader": "^6.0.7",
-    "css-loader": "^0.28.11",
-    "del": "^3.0.0"
+    "url-loader": "^0.6.2",
+    "uuid": "^3.3.2",
+    "webpack": "3.10.0",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
-
     "eslint-config-standard": "^11.0.0",
     "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-node": "^6.0.1",
