--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "eslint-plugin-html": "^4.0.6",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
-    "eslint-plugin-standard": "^3.1.0"
+    "eslint-plugin-standard": "^3.1.0",
+    "s3-deploy": "^1.2.1"
   }
 }
