--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "deploy:cacheable": "s3-deploy './dist/**' --cwd './dist/' --region 'eu-central-1' --bucket 'checklyhq.com' --etag --cache 315360000",
     "deploy:non-cacheable": "s3-deploy './dist/**/*.html' --cwd './dist/' --region 'eu-central-1' --bucket 'checklyhq.com' --etag --cache 0",
     "deploy": "npm run deploy:non-cacheable && npm run deploy:cacheable",
-    "deploy:production": "NODE_ENV=production npm run build && npm run deploy"
+    "deploy:production": "NODE_ENV=production npm generate-api-docs && npm run build && npm run deploy"
   },
   "author": "",
   "license": "MIT",
