--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "gulp server",
     "lint": "eslint src",
     "generate-api-docs": "curl -OL http://localhost:3000/swagger.json && widdershins --user_templates api-docs/widdershins-user-templates --resolve --search  --language_tabs 'shell:curl' --summary swagger.json -o api-docs/shins/source/index.html.md && cd api-docs/shins && node shins --logo ../logo.png --logo-url 'https://checklyhq.com/'  --customcss",
+    "copy-api-docs": "gulp api-docs",
     "deploy:cacheable": "s3-deploy './dist/**' --cwd './dist/' --region 'eu-central-1' --bucket 'checklyhq.com' --etag --cache 315360000",
     "deploy:non-cacheable": "s3-deploy './dist/**/*.html' --cwd './dist/' --region 'eu-central-1' --bucket 'checklyhq.com' --etag --cache 0",
     "deploy": "npm run deploy:non-cacheable && npm run deploy:cacheable",
