build: update package + build

--- a/package.json
+++ b/package.json
@@ -31,14 +31,14 @@
     "babel-preset-env": "^1.7.0",
     "babel-register": "^6.26.0",
     "bootstrap": "4.0.0-alpha.6",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.26.7",
     "css-loader": "^0.28.11",
     "del": "^3.0.0",
     "eslint": "^4.19.1",
-    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-import": "^2.19.1",
     "exports-loader": "^0.7.0",
     "file-loader": "^1.1.11",
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-babel": "^7.0.1",
     "gulp-flatten": "^0.4.0",
     "gulp-inline-css": "3.3.1",
@@ -52,10 +52,10 @@
     "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
     "run-sequence": "^2.2.1",
-    "sass-loader": "^6.0.7",
+    "sass-loader": "^8.0.0",
     "url-loader": "^0.6.2",
-    "uuid": "^3.3.2",
-    "webpack": "3.10.0",
+    "uuid": "^3.3.3",
+    "webpack": "4.41.5",
     "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
@@ -64,8 +64,8 @@
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.8.0",
     "eslint-plugin-standard": "^3.1.0",
-    "s3-deploy": "^1.2.1",
-    "shins": "^2.3.2-4",
+    "s3-deploy": "^1.4.0",
+    "shins": "^2.4.0",
     "widdershins": "^3.6.7"
   },
   "hugo-bin": {
