--- a/site/config.toml
+++ b/site/config.toml
@@ -24,39 +24,44 @@ disqusShortname = "checkly"
 
 
 [[menu.docs]]
-	name = "API Checks"
+	name = "API checks"
 	url = "/docs/api-checks/"
 	weight = 20
 
 [[menu.docs]]
-	name = "Browser Checks"
+	name = "Browser checks"
 	url = "/docs/browser-checks/"
 	weight = 30
 
 [[menu.docs]]
+	name = "Groups"
+	url = "/docs/groups/"
+	weight = 40
+
+[[menu.docs]]
 	name = "Alerting"
 	url = "/docs/alerting/"
-	weight = 40
+	weight = 50
 
 [[menu.docs]]
 	name = "CI/CD integration"
 	url = "/docs/cicd/"
-	weight = 50
+	weight = 60
 
 [[menu.docs]]
 	name = "Dashboards"
 	url = "/docs/dashboards/"
-	weight = 60
+	weight = 70
 
 [[menu.docs]]
 	name = "Teams"
 	url = "/docs/teams/"
-	weight = 70
+	weight = 80
 
 [[menu.docs]]
 	name = "Integrations"
 	url = "/docs/integrations/"
-	weight = 80
+	weight = 90
 
 [[menu.docs]]
 	name = "Puppeteer Recorder"
