--- a/package.json
+++ b/package.json
@@ -40,10 +40,10 @@
     "gulp-inline-css": "3.3.1",
     "gulp-postcss": "^7.0.1",
     "gulp-rev-all": "^0.9.8",
-    "gulp-sass": "^4.0.2",
+    "gulp-sass": "^4.1.0",
     "gulp-watch": "^5.0.1",
     "html-loader": "^0.5.5",
-    "hugo-bin": "0.50.0",
+    "hugo-bin": "^0.50.0",
     "imports-loader": "^0.7.1",
     "postcss-cssnext": "3.1.0",
     "postcss-import": "^11.1.0",
@@ -68,6 +68,6 @@
     "buildTags": "extended"
   },
   "engines": {
-    "node": ">=8.0.0 <11.0.0"
+    "node": ">=12.0.0 <14.0.0"
   }
 }
