--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://checklyhq.com"
+baseurl = "https://www.checklyhq.com"
 languageCode = "en-us"
 languageLang = "en"
 title = "Delightful Active Monitoring for the Modern Stack"
