chore: update README / run gh action only on push to master [ch-00]

--- a/.github/workflows/algolia-docsearch.yml
+++ b/.github/workflows/algolia-docsearch.yml
@@ -4,6 +4,7 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
     steps:
       - uses: actions/checkout@v2
       - name: Run doc-search
