--- a/site/data/pricing/faq.yml
+++ b/site/data/pricing/faq.yml
@@ -10,8 +10,7 @@ questions:
       every executed script as a check run. Browser check runs have a timeout threshold of 60 seconds.
   - q: How does the free trial work?
     a: By signing up for the free trial, you get full access to all of Checkly's functions. You do not need a credit card
-      to get started. You can execute up to 100,000 API and 10,000 browser check runs. The trial ends when you have used all
-      available check runs but latest after a period of 14 days. After the Free trial, we will automatically convert your account to
+      to get started. You can execute up to 100,000 API and 10,000 browser check runs. The trial ends either when you have used all available check runs or after 14 days, whichever comes first. After the Free trial, we will automatically convert your account to
       the Free plan if you haven't signed up for a Prepaid or Pay-as-you-go Plan.
   - q: What is Pay-as-you-go pricing?
     a: With a Pay-as-you-go plan, you have maximum flexibility! It is not a subscription model. You can just run your API
@@ -46,7 +45,7 @@ questions:
       your current subscription cycle automatically."
   - q: Can I change plans?
     a: When you are on a Free plan or Pay-as-you-go plan, you can switch to all plans anytime, and the changes will apply
-      immediately. When you are on a Prepaid plan, you can only change the plan type after the current billing cycle ended.
+      immediately. When you are on a Prepaid plan, you can only change the plan type after the current billing cycle has ended.
   - q: How do you bill?
     a: Prepaid plans are paid upfront at the beginning of the subscription cycle. Overages will be added to the invoice
       of the next subscription cycle. Pay-as-you-go check runs will be charged at the end of the billing cycle.
