--- a/.github/workflows/algolia-docsearch.yml
+++ b/.github/workflows/algolia-docsearch.yml
@@ -2,7 +2,7 @@ name: algolia doc-search
 on:
   - push
 jobs:
-  scrape:
+  scrape-docs:
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/master'
     steps:
@@ -12,4 +12,15 @@ jobs:
         with:
           algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
           algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
-          file: 'algolia/config.json'
+          file: 'algolia/config-docs.json'
+  scrape-learn:
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/master'
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run learn-search
+        uses: darrenjennings/algolia-docsearch-action@master
+        with:
+          algolia_application_id: ${{ secrets.ALGOLIA_APP_ID }}
+          algolia_api_key: ${{ secrets.ALGOLIA_API_KEY }}
+          file: 'algolia/config-learn.json'
