feat: add guides index page
* guides-index page desktop design

* mobile design

* update guide description lines

* enable guides menu in the learn dropdown

* update guides menu's link

--- a/site/config.toml
+++ b/site/config.toml
@@ -3,7 +3,7 @@ languageCode = "en-us"
 languageLang = "en"
 title = "Delightful Active Monitoring for Developers"
 disableKinds = ["RSS", "taxonomy", "taxonomyTerm"]
-enableGitInfo = false
+enableGitInfo = true
 enableRobotsTXT = true
 
 pygmentsCodeFences = true
